--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section class="container__firstRow">
         <div class="imageContainer">
           <nav class="navPanel">
-            <img src="images/logo.svg" alt="room" class="logo" />
+            <img src="./images/logo.svg" alt="room" class="logo" />
             <ul>
               <li>home</li>
               <li>shop</li>
@@ -44,16 +44,16 @@
             </p>
             <div class="content__link">
               <a href="#" class="link">SHOP NOW</a>
-              <img src="/images/icon-arrow.svg" alt="arrow" class="arrow" />
+              <img src="./images/icon-arrow.svg" alt="arrow" class="arrow" />
             </div>
           </div>
           <div class="slider">
             <div class="sliderOne">
-              <img src="/images/icon-angle-left.svg" alt="left" class="left" />
+              <img src="./images/icon-angle-left.svg" alt="left" class="left" />
             </div>
             <div class="sliderTwo">
               <img
-                src="/images/icon-angle-right.svg"
+                src="./images/icon-angle-right.svg"
                 alt="right"
                 class="right"
               />
