--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             </div>
           </div>
           <div class="slider">
-            <div class="sliderOne">
+            <div class="sliderLeft">
               <img src="./images/icon-angle-left.svg" alt="left" class="left" />
             </div>
-            <div class="sliderTwo">
+            <div class="sliderRight">
               <img
                 src="./images/icon-angle-right.svg"
                 alt="right"
